// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Indicator /> should render 1`] = `
<div>
  <div
    aria-label="Success"
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="indicator"
    role="status"
  >
    <div
      class="BaseBox-bmPWx fSbYvl"
      data-blade-component="base-box"
    >
      <svg
        aria-hidden="true"
        class="Svgweb__StyledSvg-vcmjs8-0"
        data-blade-component="icon"
        fill="none"
        height="8"
        viewBox="0 0 10 10"
        width="8"
      >
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          fill="hsla(216, 33%, 29%, 1)"
          r="5"
        />
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          r="4.75"
          stroke="hsla(214, 21%, 94%, 0.18)"
          stroke-width="0.5"
        />
      </svg>
      <div
        class="BaseBox-bmPWx bigiAM"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO dJlkAX"
          data-blade-component="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Indicator /> should render different variants for size and intent 1`] = `
<div>
  <div
    aria-label="Warning"
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="indicator"
    role="status"
  >
    <div
      class="BaseBox-bmPWx fSbYvl"
      data-blade-component="base-box"
    >
      <svg
        aria-hidden="true"
        class="Svgweb__StyledSvg-vcmjs8-0"
        data-blade-component="icon"
        fill="none"
        height="6"
        viewBox="0 0 10 10"
        width="6"
      >
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          fill="hsla(38, 97%, 38%, 1)"
          r="5"
        />
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          r="4.75"
          stroke="hsla(214, 21%, 94%, 0.18)"
          stroke-width="0.5"
        />
      </svg>
      <div
        class="BaseBox-bmPWx bigiAM"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO kRbeVC"
          data-blade-component="text"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Success"
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="indicator"
    role="status"
  >
    <div
      class="BaseBox-bmPWx fSbYvl"
      data-blade-component="base-box"
    >
      <svg
        aria-hidden="true"
        class="Svgweb__StyledSvg-vcmjs8-0"
        data-blade-component="icon"
        fill="none"
        height="8"
        viewBox="0 0 10 10"
        width="8"
      >
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          fill="hsla(160, 100%, 26%, 1)"
          r="5"
        />
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          r="4.75"
          stroke="hsla(214, 21%, 94%, 0.18)"
          stroke-width="0.5"
        />
      </svg>
      <div
        class="BaseBox-bmPWx bigiAM"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO dJlkAX"
          data-blade-component="text"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Error"
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="indicator"
    role="status"
  >
    <div
      class="BaseBox-bmPWx fSbYvl"
      data-blade-component="base-box"
    >
      <svg
        aria-hidden="true"
        class="Svgweb__StyledSvg-vcmjs8-0"
        data-blade-component="icon"
        fill="none"
        height="10"
        viewBox="0 0 10 10"
        width="10"
      >
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          fill="hsla(8, 73%, 47%, 1)"
          r="5"
        />
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          r="4.75"
          stroke="hsla(214, 21%, 94%, 0.18)"
          stroke-width="0.5"
        />
      </svg>
      <div
        class="BaseBox-bmPWx bigiAM"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO dJlkAX"
          data-blade-component="text"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Info"
    class="BaseBox-bmPWx jLCxzZ"
    data-blade-component="indicator"
    role="status"
  >
    <div
      class="BaseBox-bmPWx fSbYvl"
      data-blade-component="base-box"
    >
      <svg
        aria-hidden="true"
        class="Svgweb__StyledSvg-vcmjs8-0"
        data-blade-component="icon"
        fill="none"
        height="8"
        viewBox="0 0 10 10"
        width="8"
      >
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          fill="hsla(193, 100%, 35%, 1)"
          r="5"
        />
        <circle
          cx="5"
          cy="5"
          data-blade-component="svg-circle"
          r="4.75"
          stroke="hsla(214, 21%, 94%, 0.18)"
          stroke-width="0.5"
        />
      </svg>
      <div
        class="BaseBox-bmPWx bigiAM"
        data-blade-component="base-box"
      >
        <p
          class="StyledBaseText-dVBfTO dJlkAX"
          data-blade-component="text"
        />
      </div>
    </div>
  </div>
</div>
`;
